2024-09-15T00:37:39Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10866707392 # 419
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-15
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 199 230 / 200 231
* notice: next accum: outdated-unq outdated-all / unq all: 200 231 / 201 232
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2024-06-22] / [2024-09-14]

2024-06-23T00:31:42Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9629385507 # 335
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2024-06-23
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 198 228 / 199 230
* notice: next accum: outdated-unq outdated-all / unq all: 199 230 / 200 231
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2024-04-24] / [2024-06-22]

2024-04-25T01:01:59Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8825401941 # 213
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2024-04-25
* notice: last 14d: unq all: 1 2
* notice: prev accum: outdated-unq outdated-all / unq all: 198 228 / 199 229
* notice: next accum: outdated-unq outdated-all / unq all: 198 228 / 199 230
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2024-04-24]

2024-04-24T16:16:02Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8819828002 # 212