@@ -1,12 +1,21 @@
 {
-  "timestamp" : "2024-09-15T00:37:39Z",
+  "timestamp" : "2024-09-16T01:45:28Z",
   "count_outdated" : 231,
   "uniques_outdated" : 200,
-  "count" : 232,
-  "uniques" : 201,
+  "count" : 233,
+  "uniques" : 202,
   "clones" : [
     {
       "timestamp": "2024-09-14T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-09-15T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
